deployment/tempo/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tempo
  labels:
    app.kubernetes.io/name: tempo
  annotations:
    prometheus.io/port: prom-metrics
    prometheus.io/scrape: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: tempo
  serviceName: tempo-headless
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tempo
    spec:
      securityContext:
        fsGroup: 10001
      serviceAccountName: tempo
      automountServiceAccountToken: false
      containers:
      - args:
        - -config.file=/conf/tempo.yaml
        - -mem-ballast-size-mbs=1024
        image: docker.io/grafana/tempo:2.7.2
        imagePullPolicy: IfNotPresent
        name: tempo
        ports:
        - containerPort: 3100
          name: prom-metrics
        - containerPort: 6831
          name: jaeger-thrift-c
          protocol: UDP
        - containerPort: 6832
          name: jaeger-thrift-b
          protocol: UDP
        - containerPort: 14268
          name: jaeger-thrift-h
        - containerPort: 14250
          name: jaeger-grpc
        - containerPort: 9411
          name: zipkin
        - containerPort: 55680
          name: otlp-legacy
        - containerPort: 4317
          name: otlp-grpc
        - containerPort: 55681
          name: otlp-httplegacy
        - containerPort: 4318
          name: otlp-http
        - containerPort: 55678
          name: opencensus
        resources:
          limits:
            cpu: 100m
            memory: "2Gi"
          requests:
            cpu: 50m
            memory: "1Gi"
        volumeMounts:
        - mountPath: /conf
          name: tempo-conf
        - name: tempo-storage
          mountPath: /var/tempo/wal
          subPath: wal
        - name: tempo-storage
          mountPath: /var/tempo/traces
          subPath: traces
        - name: tempo-storage
          mountPath: /var/tempo/generator/wal
          subPath: generator
        - name: tempo-storage
          mountPath: /var/tempo/generator/traces
          subPath: local-traces
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
          readOnlyRootFilesystem: true
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop:
              - ALL
      volumes:
        - configMap:
            name: tempo
          name: tempo-conf
  volumeClaimTemplates:
    - metadata:
        name: tempo-storage
      spec:
        storageClassName: ebs-csi-gp3
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 200Gi
